# renegade

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: diagnostics.rs  index.rs  lib.rs  metric.rs  neighbor.rs  opt.rs  predict.rs  renegade.rs  tests.rs
src/renegade/: learn_metrics.rs  mod.rs  waypoint_index.rs
testdata/: auto_mpg.csv  iris.csv
tests/: adaptive_k_diagnostic.rs  adaptive_k_neighborhood.rs  benchmarks.rs  diverse_datasets.rs  gaussian_kernel_bench.rs  gaussian_profile.rs  metric_impact.rs  profiling.rs  simple_model_build.rs  soft_weighting.rs  waypoint_index.rs  word2vec.rs
