[package]
name = "renegade"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pav_regression = "0.2.6"
vpsearch = "2.0.1"
log = "0.4.14"
env_logger = "*"
rand = "0.8.4"
rayon = "1.5.1"
bit-vec = "0.6.3"