cargo-features = ["edition2021"]

[package]
name = "renegade"
version = "0.1.0"
edition = "2018"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pav_regression = "0.2.6"
#vpsearch = "2.0.1"
log = "*"
tracing = { version = "0.1.29", features = ["log"]}
env_logger = "*"
rand = { version = "0.8.4", features = ["small_rng"]}
rayon = "1.5.1"
bit-vec = "0.6.3"
indicatif = {version = "*", features = ["rayon"]}
ordered-float = "2.8.0"
chrono = "0.4"
xz = "0.1.0"