[package]
name = "renegade-ml"
version = "0.3.0"
edition = "2021"
description = "Zero-config nonparametric supervised learning — KNN with auto-tuned K, metric learning, and VP-tree indexing"
license = "AGPL-3.0-or-later"
repository = "https://github.com/sanity/renegade"
keywords = ["machine-learning", "knn", "nonparametric", "classification", "regression"]
categories = ["science", "algorithms"]

[dependencies]
pav_regression = "0.7"

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }
